# target-duckpond

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
target_duckpond/: sinks.py  target.py
tests/: __init__.py  test_core.py
tests/example/: .gitignore
