[tool.poetry]
name = "target-duckpond"
version = "0.0.1"
description = "`target-duckpond` is a Singer target for DuckPond, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Ken Payne"]
keywords = [
    "ELT",
    "DuckPond",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
singer-sdk = { version="^0.22.1" }
fs-s3fs = { version = "^1.1.1", optional = true }
duckdb-engine = "^0.7.0"
filelock = "^3.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
singer-sdk = { version="^0.22.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_duckpond"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-duckpond = 'target_duckpond.target:TargetDuckPond.cli'
